--- a/DEW/activity5/index.html
+++ b/DEW/activity5/index.html
@@ -17,9 +17,6 @@
         width: 50px;
         border-radius: 5px;
       }
-      .currentSong{
-      	background:red;
-      }
     </style>
   </head>
   <body>
@@ -32,14 +29,14 @@
     </ul>
 
     <ol class="playlist">
-      <li class="currentSong"><a href="warcry_la_vida_en_un_beso_sEl3wH2J8co.mp3">music1.mp3</a></li>
-      <li><a href="si_amaneciera.mp3">music2.mp3</a></li>
-      <li ><a href="papercut.mp3">music3.mp3</a></li>
+      <li><i></i>Fleslit_-_In_My_Place</li>
+      <li><i class="fa fa-bullhorn"></i>audiobinger</li>
+      <li><i></i>teehoSoma</li>
     </ol>
     <audio>
-     <!--<source src="music1.mp3" type="audio/mpeg">
-     <source src="music2.mp3" type="audio/mpeg">
-     <source src="music3.mp3" type="audio/mpeg">-->
+     <source src="fleslit_-_In_My_Place.mp3" type="audio/mpeg">
+     <source src="audiobinger.mp3" type="audio/mpeg">
+     <source src="teehoSoma.mp3" type="audio/mpeg">
      Your browser does not support the audio tag.
     </audio>
     <div class="controls">
@@ -61,48 +58,56 @@
 
     	function cBackward(audio,playlist){
     		if (songNumber == 0){
-    			playlist.children[songNumber].classList.remove("currentSong");
+    			playlist.children[songNumber].children[0].classList.remove("fa");
+    			playlist.children[songNumber].children[0].classList.remove("fa-bullhorn");
     			songNumber = playlist.children.length-1; 
-    			audio.src = playlist.children[songNumber].children[0].href;
-    			playlist.children[songNumber].classList.add("currentSong");
+    			audio.src = audio.children[songNumber].src;
+    			playlist.children[songNumber].children[0].classList.add("fa");
+    			playlist.children[songNumber].children[0].classList.add("fa-bullhorn");
     			playing = false;
-    			//cPlay(audio);
+    			cPlay(audio);
     		}else{
-    			playlist.children[songNumber].classList.remove("currentSong");
+    			playlist.children[songNumber].children[0].classList.remove("fa");
+    			playlist.children[songNumber].children[0].classList.remove("fa-bullhorn");
     			songNumber--;
-    			audio.src = playlist.children[songNumber].children[0].href
-    			playlist.children[songNumber].classList.add("currentSong");
+    			audio.src = audio.children[songNumber].src;
+    			playlist.children[songNumber].children[0].classList.add("fa");
+    			playlist.children[songNumber].children[0].classList.add("fa-bullhorn");
     			playing = false;
-    			//cPlay(audio);
+    			cPlay(audio);
     		}
 
     	}
     	function cFordward(audio,playlist){
     		if (songNumber == playlist.children.length-1){
-    			playlist.children[songNumber].classList.remove("currentSong");
+    			playlist.children[songNumber].children[0].classList.remove("fa");
+    			playlist.children[songNumber].children[0].classList.remove("fa-bullhorn");
     			songNumber = 0; 
-    			audio.src = playlist.children[songNumber].children[0].href;
-    			playlist.children[songNumber].classList.add("currentSong");
+    			audio.src = audio.children[songNumber].src;
+    			playlist.children[songNumber].children[0].classList.add("fa");
+    			playlist.children[songNumber].children[0].classList.add("fa-bullhorn");
     			playing = false;
     			cPlay(audio);
     		}else{
-    			playlist.children[songNumber].classList.remove("currentSong");
+    			playlist.children[songNumber].children[0].classList.remove("fa");
+    			playlist.children[songNumber].children[0].classList.remove("fa-bullhorn");
     			songNumber++;
-    			audio.src = playlist.children[songNumber].children[0].href
-    			playlist.children[songNumber].classList.add("currentSong");
+    			audio.src = audio.children[songNumber].src;
+    			playlist.children[songNumber].children[0].classList.add("fa");
+    			playlist.children[songNumber].children[0].classList.add("fa-bullhorn");
     			playing = false;
     			cPlay(audio);
     		}
     	}
     	let playing = false;
-    	let songNumber = 0;
+    	let songNumber = 1;
     	
     	var audio = document.getElementsByTagName("audio")[0];
     	var play = document.getElementsByClassName("play")[0];
     	var backward = document.getElementsByClassName("backward")[0];
     	var fordward = document.getElementsByClassName("fordward")[0];
-    	var playlist = document.getElementsByClassName("playlist")[0];
-    	audio.src = playlist.children[0].children[0].href;
+    	var playlist =document.getElementsByClassName("playlist")[0] ;
+    	audio.src = audio.children[1].src;
     	play.addEventListener("click",function(){
     		cPlay(audio,playlist);
     	});
